--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,123 +1,61 @@
 name: Run Tests
-on: 
+on:
   push:
-    branches: [ milestone4 ]
-
+    branches: [ milestone4, tests ]
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-
+      # Step 1: Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
+    # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
-
-      - name: Install Pipenv
-        run: |
-          python -m pip install --upgrade pip
-          pip install pipenv
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
+          python-version: '3.11'  # Adjust based on your Python version
+          
+      # Step 2: Set up Docker
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
+      
       - name: Install Docker Compose
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/download/v2.5.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
-
+      # Step 3: Install pipenv
+      - name: Install pipenv
+        run: pip install pipenv
+        
       - name: Create external Docker network
         run: docker network create llm-rag-network || true
-
-      - name: Setup test environment
-        run: |
-          cd src
-          mkdir -p .coverage-reports/htmlcov .pytest_cache coverage
-          sudo chown -R 1000:1000 .coverage-reports .pytest_cache coverage
-          sudo chmod -R 777 .coverage-reports .pytest_cache coverage
-          
-          touch Pipfile
-          chmod 666 Pipfile
-          pipenv install pytest pytest-cov pandas chromadb langchain openai google-cloud-aiplatform --dev
-          pipenv lock
-          chmod 666 Pipfile.lock
-
+        
+      # Step 3: Build Docker image
       - name: Build Docker image
-        run: |
-          cd src
-          docker build -t test-image .
-          docker image ls
+        run: docker build -t test-image -f src/Dockerfile .
 
-      - name: Run docker compose
-        run: |
-          cd src
-          docker-compose up -d
-          docker ps
-          sleep 15
+      # Step 4: Start services with Docker Compose
+      - name: Start services
+        run: docker compose -f src/docker-compose.yml up -d
 
+      # Step 5: Install dependencies
+      - name: Install dependencies
+        run: |
+          PIPENV_PIPFILE=src/Pipfile pipenv install --deploy --dev
+      # Step 6: Run tests and generate coverage report
       - name: Run tests with coverage
         run: |
-          cd src
-          CONTAINER_NAME=$(docker-compose ps -q test-image)
-          echo "Container ID: $CONTAINER_NAME"
-          
-          # Create a shell script to run the tests
-          cat << 'EOF' > run_tests.sh
-          #!/bin/bash
-          set -e  # Exit on error
-          
-          cd /app
-          
-          # Create and set permissions for coverage directory
-          mkdir -p coverage
-          chmod -R 777 coverage
-          
-          # Run tests with coverage
-          COVERAGE_FILE=/app/coverage/.coverage \
-          PYTHONPATH=/app \
-          python -m pytest \
-            --cov=dataset-creation \
-            --cov-report=term-missing \
-            --cov-report=xml:.coverage-reports/coverage.xml \
-            --cov-report=html:.coverage-reports/htmlcov \
-            tests/ -v
-          
-          # Move coverage file to reports directory
-          cp coverage/.coverage .coverage-reports/
-          
-          # Fix permissions for generated files
-          chmod -R 777 .coverage-reports coverage
-          EOF
-          
-          chmod +x run_tests.sh
-          docker cp run_tests.sh $CONTAINER_NAME:/app/
-          
-          # Run tests
-          docker exec --user app $CONTAINER_NAME bash -c "/app/run_tests.sh"
-
-      - name: Upload Coverage Report (XML)
-        if: always()
-        uses: actions/upload-artifact@v4
+          mkdir -p coverage-reports
+          PIPENV_PIPFILE=src/Pipfile pipenv run pytest --cov=src --cov-report=xml:coverage-reports/coverage.xml --cov-report=html:coverage-reports/html
+      # Step 7: Upload coverage reports as artifacts
+      - name: Upload coverage reports
+        uses: actions/upload-artifact@v3
         with:
-          name: coverage-report-xml
-          path: |
-            src/.coverage-reports/coverage.xml
-            src/.coverage-reports/.coverage
-          if-no-files-found: warn
+          name: coverage-reports
+          path: coverage-reports
 
-      - name: Upload Coverage Report (HTML)
+      # Step 8: Tear down Docker Compose services
+      - name: Tear down services
         if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report-html
-          path: src/.coverage-reports/htmlcov
-          if-no-files-found: warn
-
-      - name: Cleanup
-        if: always()
-        run: |
-          cd src
-          docker-compose down
-          docker network rm llm-rag-network || true
+        run: docker compose -f src/docker-compose.yml down
